k8s/fun-platform-elasticsearch-node3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fun-platform-elasticsearch-node3
  name: fun-platform-elasticsearch-node3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fun-platform-elasticsearch-node3
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/elastic_net: "true"
        io.kompose.service: fun-platform-elasticsearch-node3
    spec:
      containers:
        - env:
            - name: ES_JAVA_OPTS
              value: -Xms512m -Xmx512m
            - name: bootstrap.memory_lock
              value: "true"
            - name: cluster.initial_master_nodes
              value: es01,es02,es03
            - name: cluster.name
              value: es-docker-cluster
            - name: discovery.seed_hosts
              value: es01,es02
            - name: node.name
              value: es03
          image: docker.elastic.co/elasticsearch/elasticsearch:7.15.2
          name: es03
          resources: {}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data03
      restartPolicy: Always
      volumes:
        - name: data03
          persistentVolumeClaim:
            claimName: data03
status: {}
