k8s/fun-platform-redis-node1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fun-platform-redis-node1
  name: fun-platform-redis-node1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fun-platform-redis-node1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/redis: "true"
        io.kompose.service: fun-platform-redis-node1
    spec:
      containers:
        - args:
            - redis-server
            - --requirepass
            - password123
            - --appendonly
            - "yes"
          image: redis:6.2.5-alpine3.14
          name: fun-platform-redis-node1
          ports:
            - containerPort: 6379
          resources: {}
      restartPolicy: Always
status: {}
