k8s/fun-platform-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fun-platform-server
  name: fun-platform-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fun-platform-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/elastic_net: "true"
        io.kompose.network/postgres_net: "true"
        io.kompose.network/rabbitmq_net: "true"
        io.kompose.network/redis_net: "true"
        io.kompose.service: fun-platform-server
    spec:
      containers:
        - image: fun-platform-server
          name: fun-platform-server
          ports:
            - containerPort: 8083
          resources: {}
      restartPolicy: Always
status: {}
