k8s/kib01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: kib01
  name: kib01
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kib01
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/elastic_net: "true"
        io.kompose.service: kib01
    spec:
      containers:
        - env:
            - name: ELASTICSEARCH_HOSTS
              value: '["http://es01:9200","http://es02:9200","http://es03:9200"]'
            - name: ELASTICSEARCH_URL
              value: http://es01:9200
          image: docker.elastic.co/kibana/kibana:7.15.2
          name: kib01
          ports:
            - containerPort: 5601
          resources: {}
      restartPolicy: Always
status: {}
