k8s/postgresql-gui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: postgresql-gui
  name: postgresql-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgresql-gui
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/postgres: "true"
        io.kompose.service: postgresql-gui
    spec:
      containers:
        - env:
            - name: PGADMIN_CONFIG_SERVER_MODE
              value: "False"
            - name: PGADMIN_DEFAULT_EMAIL
              value: coldmorning360@gmail.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: "123456"
          image: dpage/pgadmin4:5.7
          name: postgres-gui
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: postgresql-gui-claim0
      restartPolicy: Always
      volumes:
        - name: postgresql-gui-claim0
          persistentVolumeClaim:
            claimName: postgresql-gui-claim0
status: {}
