k8s/redis-gui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-gui
  name: redis-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-gui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.24.0 (7c629530)
      creationTimestamp: null
      labels:
        io.kompose.network/redis: "true"
        io.kompose.service: redis-gui
    spec:
      containers:
        - env:
            - name: REDIS_HOSTS
              value: label:fun-platform-redis-node1:6379:0:password123
          image: rediscommander/redis-commander:latest
          name: redis-gui
          ports:
            - containerPort: 8081
          resources: {}
      hostname: redis-gui
      restartPolicy: Always
status: {}
