k8s/fun-platform-elasticsearch-node1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fun-platform-elasticsearch-node1
  name: fun-platform-elasticsearch-node1
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
  selector:
    io.kompose.service: fun-platform-elasticsearch-node1
status:
  loadBalancer: {}
