k8s/fun-platform-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.24.0 (7c629530)
  creationTimestamp: null
  labels:
    io.kompose.service: fun-platform-server
  name: fun-platform-server
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8083
  selector:
    io.kompose.service: fun-platform-server
status:
  loadBalancer: {}
