k8s/redis-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: redis
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/redis: "true"
  podSelector:
    matchLabels:
      io.kompose.network/redis: "true"
